# EikonDownloader

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd  README.md
.github/: copilot-instructions.md
.github/workflows/: R-CMD-check.yaml
R/: API_connection.R  datagrid.R  extendr-wrappers.R  search.R  send_json_request.R  send_request.R  timeseries.R  utils.R  zzz.R
doc/: Userguide.R  Userguide.html
man/: Health_searchView.Rd  POST_searchView.Rd  calculate_returns.Rd  check_if_date.Rd  date_to_JSON.Rd  debug_msg.Rd  dg_fetch_headers.Rd  dg_to_dataframe.Rd  done_msg.Rd  ek_fetch_port.Rd  ek_get_APIKEY.Rd  ek_get_address.Rd  ek_get_port.Rd  ek_get_searchlight.Rd  ek_get_status.Rd  ek_get_url.Rd  ek_set_APIKEY.Rd  ek_set_port.Rd  ek_test_connection.Rd  fetch_timeseries.Rd  get_datagrid.Rd  get_timeseries.Rd  health_searchView.Rd  info_msg.Rd  json_builder.Rd  rows_pr_inst.Rd  search_view.Rd  send_json_request.Rd  seq_of_dates.Rd  to_dataframe.Rd  ts_payload_loop.Rd
src/: EikonDownloader-win.def  Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: connection.rs  datagrid.rs  lib.rs  timeseries.rs  utils.rs
tests/: testthat.R
tests/testthat/: test-API_connection.R  test-datagrid.R  test-timeseries.R  test-utils.R  test-zzz.R
tests/testthat/test_data/: app_key.RData
vignettes/: Userguide.Rmd  my-vignette.Rmd
vignettes/articles/: EikonDownloader.Rmd  EikonDownloader.html
