[package]
name = 'EikonDownloader'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'EikonDownloader'

[dependencies]
extendr-api = '*'
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
polars = { version = "0.27.2", features = ["serde", "json", "rows"] }
chrono = { version = "0.4.23", features = ["serde", "std"] }