[package]
name = 'EikonDownloader'
version = '0.2.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'EikonDownloader'

[dependencies]
extendr-api = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "std"] }
tokio = { version = "1", features = ["full"] }